# termux-language-server

./: .cmakelintrc  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .readthedocs.yaml  29 June 2007  CMakeLists.txt  README.md  flake.nix  pyproject.toml  requirements.txt
.github/: FUNDING.yml
.github/workflows/: main.yml
docs/: conf.py  index.md  requirements.txt
docs/api/: termux-language-server.md
docs/resources/: configure.md  install.md  requirements.md
requirements/: colorize.txt  dev.txt  ebuild.txt  misc.txt  pkgbuild.txt  termux.txt
scripts/: generate-PKGBUILD.json.py  generate-_ebuild.json.py  generate-api.md.pl  generate-build.sh.json.py  generate-color.map.json.py  generate-make.conf.json.py  generate-makepkg.conf.json.py  generate-requirements.md.pl
src/termux_language_server/: __init__.py  __main__.py  _shtab.py  api.py  finders.py  linter.py  parser.py  schema.py  server.py  utils.py
src/termux_language_server/assets/jinja/: PKGBUILD.md.jinja
src/termux_language_server/assets/jinja2/: ebuild.md.j2
src/termux_language_server/assets/jq/: value.jq
src/termux_language_server/assets/json/: PKGBUILD.json  _bash.json  _devscripts.json  _ebuild.json  _install.json  _mdd.json  build.sh.json  color.map.json  devscripts.conf.json  ebuild.json  install.json  make.conf.json  makepkg.conf.json  mdd.json  subpackage.sh.json  termux.json
src/termux_language_server/assets/queries/: mingw.scm  package.scm
src/termux_language_server/documents/: __init__.py  builtin.py  termux.py
src/termux_language_server/misc/: __init__.py  color_map.py  ebuild.py  licenses.py  make_conf.py  makepkg_conf.py  pkgbuild.py  portage.py  termux.py  utils.py
src/termux_language_server/queries/: packages.scm  schema.scm
src/termux_language_server/searcher/: pacman.py  portage.py
src/termux_language_server/tools/: namcap.py
src/termux_language_server/tree_sitter_lsp/: __init__.py  complete.py  diagnose.py  finders.py  format.py  schema.py  utils.py
templates/: class.txt  def.txt  metainfo.py  metainfo.py.j2  noarg.txt
tests/: PKGBUILD  build.sh  neovim-0.9.4.ebuild  server_test.py  test_documents.py  test_schema.py  test_server.py  test_utils.py
