[build-system]
requires = ["scikit-build-core"]
build-backend = "scikit_build_core.build"

# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
[project]
name = "termux-language-server"
description = "termux language server"
readme = "README.md"
# type_a | type_b
requires-python = ">= 3.10"
keywords = ["termux", "language server"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX",
  "Operating System :: Unix",
  "Operating System :: MacOS",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
# dynamic = ["version", "dependencies", "optional-dependencies"]
# https://github.com/pypa/twine/issues/753
dynamic = ["version"]
dependencies = [
  "colorama",
  "fqdn",
  "jinja2",
  "platformdirs",
  "pygls",
  "rfc3987",
  "tree-sitter",
]

[project.optional-dependencies]
colorize = ["pygments"]
dev = ["pytest-cov"]
misc = ["beautifulsoup4", "markdown-it-py", "pypandoc"]
# pyproject.toml doesn't support git+git://
pkgbuild = ["pyalpm"]

[[project.authors]]
name = "Wu Zhenyu"
email = "wuzhenyu@ustc.edu"

[project.license]
text = "GPL v3"

[project.urls]
Homepage = "https://termux-language-server.readthedocs.io"
Download = "https://github.com/termux/termux-language-server/releases"
"Bug Report" = "https://github.com/termux/termux-language-server/issues"
Source = "https://github.com/termux/termux-language-server"

[project.scripts]
termux-language-server = "termux_language_server.__main__:main"
pkgbuild-language-server = "termux_language_server.__main__:main"
portage-language-server = "termux_language_server.__main__:main"

[tool.scikit-build]
experimental = true

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.setuptools_scm"

[tool.scikit-build.sdist]
include = ["src/termux_language_server/_version.py"]

[[tool.scikit-build.generate]]
path = "termux_language_server/_metainfo.py"
template-path = "templates/metainfo.py"

[tool.setuptools.dynamic.dependencies]
file = "requirements.txt"

# begin: scripts/update-pyproject.toml.pl
[tool.setuptools.dynamic.optional-dependencies.colorize]
file = "requirements/colorize.txt"

[tool.setuptools.dynamic.optional-dependencies.dev]
file = "requirements/dev.txt"

[tool.setuptools.dynamic.optional-dependencies.termux]
file = "requirements/termux.txt"
# end: scripts/update-pyproject.toml.pl

[tool.setuptools_scm]
write_to = "src/termux_language_server/_version.py"

[tool.mdformat]
number = true

[tool.black]
line-length = 79

[tool.isort]
line_length = 79
profile = "black"

# https://github.com/PyCQA/pydocstyle/issues/418
[tool.pydocstyle]
add_ignore = "D205, D400"

[tool.doq]
template_path = "templates"

[tool.coverage.report]
exclude_lines = [
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
  "\\s*import tomli as tomllib",
]

[tool.bandit.assert_used]
skips = ["*_test.py", "*/test_*.py"]

[tool.cibuildwheel]
archs = ["all"]
# jsonschema depends on rpds-py which depends on cargo
# disable *-musllinux_*
# Fatal Python error: Segmentation fault
# disable pp*
skip = "*37-* *38-* *39-* *-musllinux_* pp*"
before-test = "pip install -rrequirements.txt -rrequirements/dev.txt"
test-command = "pytest {project}"
