[project]
name = "termux-language-server"
version = "0.1.0"
description = "language server for PKGBUILD/build.sh/ebuild"
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
authors = [{ name = "Wu, Zhenyu", email = "wuzhenyu@ustc.edu" }]
keywords = ["json schema", "language server", "tree sitter"]
dependencies = [
  "fqdn>=1.5.1",
  "jinja2>=3.1.6",
  "lsp-tree-sitter>=0.2.6",
  "platformdirs>=4.10.1",
  "rfc3987>=1.3.8",
  "tree-sitter-bash>=0.25.1",
]

[project.scripts]
termux-language-server = "termux_language_server.__main__:main"

[project.optional-dependencies]
dev = [
  "license-expression>=30.4.4",
  "pytest-cov>=7.1.0",
]
ebuild = [
  "portage>=3.0.81.2",
]
pkgbuild = [
  # "git+https://gitlab.archlinux.org/pacman/namcap",
  "pyalpm>=0.10.0",
]

[build-system]
requires = ["uv_build<0.12"]
build-backend = "uv_build"

[tool.codespell]
ignore-words-list = "namd, doman"

[tool.coverage.report]
exclude_lines = [
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
  "\\s*import tomli as tomllib",
]

[tool.doq]
template_path = "templates"

[tool.mdformat]
number = true

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = [
  # pycodestyle
  "E",
  # pyflakes
  "F",
  # pyupgrade
  "UP",
  # flake8-bugbear
  "B",
  # flake8-simplify
  "SIM",
  # isort
  "I",
]
ignore = ["D205", "D400"]
preview = true

[tool.ruff.format]
docstring-code-format = true
preview = true
